# magic-the-battling

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TASKS.md  app.py  fly.dev.toml  fly.toml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  deploy-dev.yml  deploy-main.yml  pr-load-test.yml  release.yml
frontend/: index.html  package-lock.json
frontend/css/: styles.css
frontend/js/: api.js  draft.js  models.js
mtb/: utils.py
mtb/creators/: battler.py
mtb/models/: card_registry.py  cards.py  game.py  state.py  types.py
mtb/phases/: __init__.py  battle.py  build.py  draft.py  elimination.py  reward.py
mtb/utils/: cubecobra.py  json_helpers.py  scryfall.py
scripts/: fly_activity_report.py  maintain_db.py  migrate_snapshot_storage.py  start_server.sh
server/: compression.py  dev.py  errors.py  main.py  monitoring.py  observability.py  runtime_config.py
server/db/: database.py  maintenance.py  models.py  snapshot_migration.py
server/perf/: __init__.py  load_harness.py
server/routers/: auth.py  battlers.py  discover.py  games.py  ops.py  share_preview.py  ws.py
server/schemas/: api.py  auth.py
server/services/: auth.py  game_manager.py  game_serialization.py  ops_manager.py  preview.py  session_manager.py
spec/: draft.md  slots.md
tests/: conftest.py  test_abandoned_cleanup_policy.py  test_api_games.py  test_api_websocket.py  test_auth.py  test_battle.py  test_build.py  test_cards.py  test_config_properties.py  test_connection_manager.py  test_cubecobra.py  test_db_maintenance.py  test_draft.py  test_e2e_game_creation.py  test_elimination.py  test_game.py  test_game_flow.py  test_game_init.py  test_game_manager.py  test_game_serialization.py  test_ghost_sudden_death_e2e.py  test_json_helpers.py  test_pending_disconnect.py  test_perf_harness.py  test_phase_validation.py  test_reward.py  test_runtime_isolation.py  test_server_status.py  test_share_game.py  test_share_preview.py  test_snapshot_migration.py  test_synthetic_battler.py  test_voice_signal.py  test_ws_runtime_disconnect.py
tests/perf/: thresholds.json
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: site.webmanifest
web/src/: App.tsx  index.css  types.ts
web/src/api/: client.ts
web/src/components/: ActionMenu.tsx  Card.tsx  CardZone.tsx  CardsView.tsx  ContextStrip.tsx  ControlsTab.tsx  CubeGameHistory.tsx  DocRenderer.tsx  ErrorBoundary.tsx  GameSummary.tsx  GuidedWalkthrough.tsx  HelpDrawer.tsx  HotkeyRow.tsx  HotkeysModal.tsx  PhasePopover.tsx  PhaseTimeline.tsx  PlayerList.tsx  PlayerStatsBar.tsx  QuickGuide.tsx  RulesModal.tsx  RulesPanel.tsx  ShareModal.tsx  rulesPanelWindow.test.ts  rulesPanelWindow.ts
web/src/constants/: assets.ts  hints.ts  hotkeys.ts  phases.ts  rules.ts  showcaseCards.ts
web/src/contexts/: AuthContext.tsx  ContextStripContext.tsx  DocNavContext.ts  FaceDownContext.tsx  ToastContext.tsx  (+5 more)
(+202 files in other folders)
