[project]
name = "mtb"
version = "0.1.0"
description = "A FastAPI application for Magic: The Battling game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "requests>=2.32.3",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = ["pytest>=8.3.4", "ruff>=0.8.6"]

[tool.uv.sources]
magic-the-battling = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
