[project]
name = "mtb"
version = "0.1.0"
description = "A FastAPI application for Magic: The Battling game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.7",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest>=8.3.4",
    "ruff>=0.8.6",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E402"]
